<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.client.fire_and_water.StartFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_start">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_FifthFragment"
            app:destination="@id/FifthFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.client.fire_and_water.LogInFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_log_in">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />

    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.client.fire_and_water.GameMenuFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_game_menu">

        <action
            android:id="@+id/action_ThirdFragment_to_ForthFragment"
            app:destination="@id/ForthFragment" />
    </fragment>

    <fragment
        android:id="@+id/ForthFragment"
        android:name="com.client.fire_and_water.ConnectToGameFragment"
        android:label="@string/forth_fragment_label"
        tools:layout="@layout/fragment_connect_to_game">

    </fragment>

    <fragment
        android:id="@+id/FifthFragment"
        android:name="com.client.fire_and_water.SignUpFragment"
        android:label="@string/fifth_fragment_label"
        tools:layout="@layout/fragment_sign_up">

        <action
            android:id="@+id/action_FifthFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"/>
    </fragment>
</navigation>